--- a/javaFX/src/components/customer/Customer.fxml
+++ b/javaFX/src/components/customer/Customer.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="322.0" prefWidth="272.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="components.ProductController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="261.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="components.customer.CustomerController">
    <children>
       <Label id="nameLabel" fx:id="nameLabel" layoutX="114.0" layoutY="26.0" styleClass="subTitle" />
       <Label id="detailsLabel" fx:id="detailsLabel" layoutX="20.0" layoutY="86.0" />
