--- a/webApp/web/common/notifications.css
+++ b/webApp/web/common/notifications.css
@@ -61,8 +61,9 @@
     opacity: 1;
 }
 .notification{
-    width: 100%;
-    margin-top: 5px;
+    width: 95%;
+    padding: 2px;
+    margin: 5px auto auto;
     min-height: 70px;
     background-color: white;
     box-shadow: 0px 0px 9px 0px #a0a0a0;
